@@ -13,6 +13,8 @@ TRUNK
 - [bugfix] cruise start --daemon works with Webrick
 - [bugfix] stop builder processes from going zombie by using Process#detach [Kurtis Seebaldt]
 - [bugfix] made image URLS in stylesheets relative [Anselm Helbig]
+- build log parser recognizes errors, failures and example counts produced by RSpec
+- dashboard strips out ANSI colors when displaying a build log 
 
 ------------------------------------------------------------------------------------------------------------------------
 * 1.3.0
